--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ typings/
 
 # next.js build output
 .next
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/js-examples.iml
+.idea/dictionaries/codingnuts.xml
