--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/crazyvalse/js-examples/issues"
   },
-  "homepage": "https://github.com/crazyvalse/js-examples#readme"
+  "homepage": "https://github.com/crazyvalse/js-examples#readme",
+  "devDependencies": {
+    "koa": "^2.6.2"
+  }
 }
