--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
   },
   "homepage": "https://github.com/crazyvalse/js-examples#readme",
   "devDependencies": {
-    "koa": "^2.6.2"
+    "crypto-js": "^3.1.9-1",
+    "js-base64": "^2.5.1",
+    "koa": "^2.6.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "art-template": "^4.13.2"
   }
 }
