--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
-    "art-template": "^4.13.2",
     "alloytouch": "0.2.5",
+    "art-template": "^4.13.2",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "create-hmac": "^1.1.7",
     "gsap": "2.0.2",
     "pixi.js": "4.8.4",
     "vconsole": "^3.3.4"
