--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "alloytouch": "0.2.5",
     "art-template": "^4.13.2",
+    "create-hmac": "^1.1.7",
+    "mongoose": "^5.8.1"
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "create-hmac": "^1.1.7",
