--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "some js related examples",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "create-hmac": "^1.1.7",
     "git-utils": "^5.6.2",
     "gsap": "2.0.2",
+    "jest": "^25.1.0",
     "pixi.js": "4.8.4",
     "vconsole": "^3.3.4"
   }
