--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
+    "@babel/parser": "^7.9.0",
+    "@babel/traverse": "^7.9.0",
+    "@waiting/base64": "^4.2.9",
     "alloytouch": "0.2.5",
     "art-template": "^4.13.2",
-    "create-hmac": "^1.1.7",
-    "mongoose": "^5.8.1"
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "create-hmac": "^1.1.7",
     "git-utils": "^5.6.2",
     "gsap": "2.0.2",
+    "mongoose": "^5.8.1",
     "pixi.js": "4.8.4",
     "vconsole": "^3.3.4"
-    "@waiting/base64": "^4.2.9",
   }
 }
