--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
-    "@babel/parser": "^7.9.0",
+    "@babel/core": "^7.9.0",
+    "@babel/generator": "^7.9.3",
+    "@babel/parser": "^7.9.3",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-stage-0": "^7.8.3",
     "@babel/traverse": "^7.9.0",
     "@waiting/base64": "^4.2.9",
     "alloytouch": "0.2.5",
@@ -38,8 +42,10 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "create-hmac": "^1.1.7",
+    "fs-extra": "^9.0.0",
     "git-utils": "^5.6.2",
     "gsap": "2.0.2",
+    "jsonic": "^0.3.1",
     "mongoose": "^5.8.1",
     "pixi.js": "4.8.4",
     "vconsole": "^3.3.4"
