--- a/webpack/01/package.json
+++ b/webpack/01/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/parser": "^7.9.0",
-    "@babel/traverse": "^7.9.0"
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@babel/traverse": "^7.9.0",
+    "jsonic": "^0.3.1",
+    "lodash": "^4.17.15"
   }
 }
